--- a/app/tpls/simple.html
+++ b/app/tpls/simple.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>plupload</title>
-    <link rel="stylesheet" type="text/css" href="../official/style.css"/>
+    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="stylesheet" type="text/css" href="../app/css/style.css"/>
     <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.js"></script>
-    <script type="text/javascript" src="../../lib/plupload-2.3.1/js/plupload.full.min.js"></script>
+    <script type="text/javascript" src="../lib/plupload-2.3.1/js/plupload.full.min.js"></script>
+    <script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks.swalupload.entry %>"></script>
 </head>
 <body>
+<h1>单文件上传</h1>
 <h4>您所选择的文件列表：</h4>
 <div id="ossfile">
-	<!-- 文件显示 -->
+    <!-- 文件显示 -->
 </div>
 
 <br/>
@@ -25,7 +27,7 @@
 
 <p>&nbsp;</p>
 <script>
-    $('#selectfiles').alioss({
+    $('#selectfiles').swalupload({
         postButton:'#postfiles',
         rename:false,
         multi:false,
