--- a/tests/list.html
+++ b/tests/list.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>多文件上传</title>
     <link rel="stylesheet" type="text/css" href="../app/css/style.css"/>
-    <script src="https://cdn.bootcss.com/jquery/2.2.4/jquery.js"></script>
-    <script type="text/javascript" src="../lib/plupload-2.3.1/js/plupload.full.min.js"></script>
+	<script src="../app/js/jquery-2.2.4.js"></script>
 	<script type="text/javascript" src="../dist/swalupload.js"></script>
 </head>
 <body>
