--- a/app/tpls/simple.html
+++ b/app/tpls/simple.html
@@ -30,12 +30,12 @@
         postButton:'#postfiles',
         rename:false,
         multi:false,
-        FilesAdded:function (file) {
+        FilesAdded:function (file,sel,up) {
             $('#ossfile').append('<div id="' + file.id + '">' + file.name + ' (' + file.ratio + ')<b></b>'
                 + '<div class="progress"><div class="progress-bar" style="width: 0%"></div></div>'
                 + '</div>');
         },
-        UploadProgress:function (file) {
+        UploadProgress:function (file,sel,up) {
             var d = document.getElementById(file.id);
             d.getElementsByTagName('b')[0].innerHTML = '<span>' + file.percent + "%</span>";
             var prog = d.getElementsByTagName('div')[0];
@@ -43,7 +43,7 @@
             progBar.style.width= 2*file.percent+'px';
             progBar.setAttribute('aria-valuenow',file.percent);
         },
-        FileUploaded:function (file,info) {
+        FileUploaded:function (file,info,sel,up) {
             if (info.status == 200)
             {
                 document.getElementById(file.id).getElementsByTagName('b')[0].innerHTML = 'upload to oss success, object name:' + file.name;
@@ -53,7 +53,7 @@
                 document.getElementById(file.id).getElementsByTagName('b')[0].innerHTML = info.response;
             }
         },
-        Error:function (msg) {
+        Error:function (msg,sel,up) {
             console.log(msg);
         }
     });
