--- a/tests/list.html
+++ b/tests/list.html
@@ -30,6 +30,11 @@
     $('#file-list li button').swalupload({
         rename:false,
         multi:false,
+        filters:{
+            mime_types : [ //只允许上传图片和zip,rar文件
+                { title : "Image files", extensions : "png,jpg" }
+            ]
+        },
         FilesAdded:function (file) {
             $('#ossfile').append('<div id="' + file.id + '">' + file.name + ' (' + file.ratio + ')<b></b>'
                 + '<div class="progress"><div class="progress-bar" style="width: 0%"></div></div>'
