plupload split base

--- a/app/tpls/batch.html
+++ b/app/tpls/batch.html
@@ -5,6 +5,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" type="text/css" href="../app/css/style.css"/>
 	<script src="../app/js/jquery-2.2.4.js"></script>
+	<script src="/alioss/plupload/js/plupload.full.min.js"></script>
 	<script type="text/javascript" src="<%= htmlWebpackPlugin.files.chunks.swalupload.entry %>"></script>
 </head>
 <body>
