--- a/app/tpls/localserver.html
+++ b/app/tpls/localserver.html
@@ -32,6 +32,7 @@
         rename:true,
         multi:false,
         serverSaveUrl:'http://localhost/alioss/php/server.php', //提交到本地存储
+        postData:{_token:'1233'},
         filters:{
             mime_types : [ //只允许上传图片和zip,rar文件
                 { title : "Image files", extensions : "png,jpg" }
